--- a/rag-backend/requirements.txt
+++ b/rag-backend/requirements.txt
@@ -14,7 +14,7 @@ langchain>=0.0.300
 # RAG and LLM Dependencies
 sentence-transformers>=2.2.0
 faiss-cpu>=1.7.4
-google-generativeai>=0.3.0  # Gemini API
+google.generativeai
 
 # Data Processing
 numpy>=1.21.0
