--- a/rag-frontend/package.json
+++ b/rag-frontend/package.json
@@ -6,9 +6,12 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "d3": "^7.9.0",
+    "force-graph": "^1.49.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-force-graph-2d": "^1.27.0",
     "react-icons": "^5.4.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
